<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@null"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:elevation="8dp"
        android:focusable="true"
        android:src="@drawable/ic_delete_round_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mainLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp"
        android:minHeight="90dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:id="@+id/bulletGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/subtitle"
                app:layout_constraintStart_toStartOf="@+id/subtitle"
                app:layout_constraintTop_toBottomOf="@id/subtitle"
                app:layout_constraintVertical_bias="0.0">
                <!-- inflated dynamically -->
            </LinearLayout>

            <TextView
                android:id="@+id/subtitle"
                style="@style/Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/you_will_also_permanently_lose"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/title"
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginVertical="8dp"
                android:text="@string/delete_text_forever"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/buttonLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:background="?attr/delete_dialog_button_bar_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bulletGroup" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteButton"
                style="@style/DeleteDialogButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancelButton"
                app:layout_constraintTop_toTopOf="@id/buttonLayout"
                app:layout_constraintWidth_percent="0.33" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                style="@style/CancelDialogButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/deleteButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/buttonLayout"
                app:layout_constraintWidth_percent="0.33" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>