<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="16dp"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/trainingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/training_card_bg_color"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:background="?attr/training_card_bg_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp">

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:scrollbarSize="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/filterText"
                app:layout_constraintVertical_bias="1.0">

                <com.example.road.to.effective.snapshot.testing.recyclerviewscreen.ui.views.LanguageRadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="horizontal"
                    tools:layout_height="80dp"
                    >
                    <!-- inflate dynamically -->

                </com.example.road.to.effective.snapshot.testing.recyclerviewscreen.ui.views.LanguageRadioGroup>>
            </HorizontalScrollView>

            <ImageView
                android:id="@+id/emptyMemorisesImage"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_holidays"
                app:layout_constraintBottom_toBottomOf="@id/horizontalScrollView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:alpha="0"
                tools:alpha="0"/>

            <TextView
                android:id="@+id/filterText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="8dp"
                android:letterSpacing="0.1"
                android:text="@string/filter_words_to_memorise_text"
                android:textColor="@android:color/white"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amountText"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/montserrat_alternates"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:lineSpacingMultiplier="0.85"
                android:text="@string/words_to_memorise_title"
                android:textAlignment="gravity"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/amountText"
                app:layout_constraintEnd_toStartOf="@id/trainButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/amountText"
                app:layout_constraintTop_toTopOf="@id/amountText" />

            <com.example.road.to.effective.snapshot.testing.recyclerviewscreen.ui.views.DigitTextView
                android:id="@+id/amountText"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/trainButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/train_button_text"
                android:textColor="@android:color/white"
                app:cornerRadius="50dp"
                app:icon="@drawable/ic_training_24dp"
                app:iconPadding="12dp"
                app:iconTint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/title"
                app:strokeColor="@android:color/white"
                app:strokeWidth="2dp"
                android:backgroundTint="?attr/training_card_bg_color"
                 />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>